bindings/java/src/main/java/io/slatedb/jna/ffi/UniffiLib.java


  RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_ffimergeoperator_merge(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue existingValue,
      RustBuffer.ByValue operand,
      UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffiobjectstore(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffiobjectstore(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_from_env(
      RustBuffer.ByValue envFile, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffiobjectstore_resolve(
      RustBuffer.ByValue url, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffisettings(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffisettings(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_default(
      UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env(
      RustBuffer.ByValue prefix, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_from_env_with_default(
      RustBuffer.ByValue prefix, Pointer defaultSettings, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_from_file(
      RustBuffer.ByValue path, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_from_json_string(
      RustBuffer.ByValue json, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffisettings_load(UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffisettings_set(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue valueJson,
      UniffiRustCallStatus uniffi_out_errmk);

  RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_ffisettings_to_json_string(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffiwalfile(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffiwalfile(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffiwalfile_id(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffiwalfile_iterator(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffiwalfile_metadata(Pointer ptr);

  Pointer uniffi_slatedb_ffi_fn_method_ffiwalfile_next_file(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffiwalfile_next_id(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwalfile_shutdown(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffiwalfileiterator(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffiwalfileiterator(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_next(Pointer ptr);

  void uniffi_slatedb_ffi_fn_method_ffiwalfileiterator_shutdown(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffiwalreader(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffiwalreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffiwalreader_new(
      RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_method_ffiwalreader_get(
      Pointer ptr, Long id, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffiwalreader_list(
      Pointer ptr, RustBuffer.ByValue startId, RustBuffer.ByValue endId);

  void uniffi_slatedb_ffi_fn_method_ffiwalreader_shutdown(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffiwritebatch(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffiwritebatch(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffiwritebatch_new(
      UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwritebatch_delete(
      Pointer ptr, RustBuffer.ByValue key, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue operand,
      UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwritebatch_merge_with_options(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue operand,
      RustBuffer.ByValue options,
      UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwritebatch_put(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue value,
      UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffiwritebatch_put_with_options(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue value,
      RustBuffer.ByValue options,
      UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_func_ffi_init_logging(
      RustBuffer.ByValue level, RustBuffer.ByValue callback, UniffiRustCallStatus uniffi_out_errmk);

  RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_alloc(
      Long size, UniffiRustCallStatus uniffi_out_errmk);

  RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_from_bytes(
      ForeignBytes.ByValue bytes, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rustbuffer_free(
      RustBuffer.ByValue buf, UniffiRustCallStatus uniffi_out_errmk);

  RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_reserve(
      RustBuffer.ByValue buf, Long additional, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_u8(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_u8(Long handle);

  void ffi_slatedb_ffi_rust_future_free_u8(Long handle);

  Byte ffi_slatedb_ffi_rust_future_complete_u8(Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_i8(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_i8(Long handle);

  void ffi_slatedb_ffi_rust_future_free_i8(Long handle);

  Byte ffi_slatedb_ffi_rust_future_complete_i8(Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_u16(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_u16(Long handle);

  void ffi_slatedb_ffi_rust_future_free_u16(Long handle);

  Short ffi_slatedb_ffi_rust_future_complete_u16(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_i16(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_i16(Long handle);

  void ffi_slatedb_ffi_rust_future_free_i16(Long handle);

  Short ffi_slatedb_ffi_rust_future_complete_i16(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_u32(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_u32(Long handle);

  void ffi_slatedb_ffi_rust_future_free_u32(Long handle);

  Integer ffi_slatedb_ffi_rust_future_complete_u32(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_i32(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_i32(Long handle);

  void ffi_slatedb_ffi_rust_future_free_i32(Long handle);

  Integer ffi_slatedb_ffi_rust_future_complete_i32(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_u64(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_u64(Long handle);

  void ffi_slatedb_ffi_rust_future_free_u64(Long handle);

  Long ffi_slatedb_ffi_rust_future_complete_u64(Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_i64(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_i64(Long handle);

  void ffi_slatedb_ffi_rust_future_free_i64(Long handle);

  Long ffi_slatedb_ffi_rust_future_complete_i64(Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_f32(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_f32(Long handle);

  void ffi_slatedb_ffi_rust_future_free_f32(Long handle);

  Float ffi_slatedb_ffi_rust_future_complete_f32(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_f64(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_f64(Long handle);

  void ffi_slatedb_ffi_rust_future_free_f64(Long handle);

  Double ffi_slatedb_ffi_rust_future_complete_f64(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_pointer(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_pointer(Long handle);

  void ffi_slatedb_ffi_rust_future_free_pointer(Long handle);

  Pointer ffi_slatedb_ffi_rust_future_complete_pointer(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_rust_buffer(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_rust_buffer(Long handle);

  void ffi_slatedb_ffi_rust_future_free_rust_buffer(Long handle);

  RustBuffer.ByValue ffi_slatedb_ffi_rust_future_complete_rust_buffer(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  void ffi_slatedb_ffi_rust_future_poll_void(
      Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);

  void ffi_slatedb_ffi_rust_future_cancel_void(Long handle);

  void ffi_slatedb_ffi_rust_future_free_void(Long handle);

  void ffi_slatedb_ffi_rust_future_complete_void(
      Long handle, UniffiRustCallStatus uniffi_out_errmk);

  Short uniffi_slatedb_ffi_checksum_func_ffi_init_logging();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_begin();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_delete();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_delete_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_flush();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_flush_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_get();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_get_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_merge();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_merge_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_metrics();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_put();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_put_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_scan();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix_with_options();
